feat(protractor): add initial protractor setup

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "main": "dist/index.html",
   "scripts": {
     "ng": "ng",
-    "ngapimock": "node server.js &",
+    "ngapimock": "node test/server.js &",
     "start": "npm run ngapimock && ng serve --proxy-config proxy.config.json --host=0.0.0.0",
     "prebuild": "rm -rf dist",
     "build": "ng build --aot --prod",
     "lint": "ng lint",
-    "test": "jasmine-ts \"src/**/*.spec.ts\" --project=src/tsconfig.spec.json"
+    "test": "jasmine-ts \"src/**/*.spec.ts\" --project=src/tsconfig.spec.json",
+    "protractor-local": "protractor test/protractor.local.conf.js",
+    "protractor-ci": "protractor test/protractor.ci.conf.js"
   },
   "repository": {
     "type": "git",
@@ -50,12 +52,19 @@
     "@angular/language-service": "6.1.7",
     "@ng-apimock/core": "1.0.2",
     "@ng-apimock/test-application": "1.0.4",
+    "@types/chai": "^4.1.4",
+    "@types/cucumber": "^4.0.4",
     "@types/jasmine": "2.8.8",
     "@types/node": "10.9.4",
     "@types/sinon": "5.0.2",
+    "chai": "^4.1.2",
     "codelyzer": "4.4.4",
     "connect": "3.6.6",
+    "cucumber": "^4.2.1",
     "jasmine-ts": "0.2.1",
+    "protractor": "^5.4.1",
+    "protractor-cucumber-framework": "^6.0.0",
+    "sauce-connect-launcher": "^1.2.4",
     "sinon": "6.2.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
