--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "main": "dist/index.html",
   "scripts": {
     "ng": "ng",
-    "ngapimock": "node test/server.js &",
-    "start": "npm run ngapimock && ng serve --proxy-config proxy.config.json --host=0.0.0.0",
+    "ngapimock": "node test/server.js",
     "prebuild": "rm -rf dist",
-    "build": "ng build --aot --prod",
+    "build": "ng build --configuration=production",
     "lint": "ng lint",
-    "test": "jasmine-ts \"src/**/*.spec.ts\" --project=src/tsconfig.spec.json",
+    "test": "jasmine-ts --config=jasmine.json --project=src/tsconfig.spec.json",
     "protractor-local": "protractor test/protractor.local.conf.js",
-    "protractor-ci": "protractor test/protractor.ci.conf.js"
+    "protractor-ci": "protractor test/protractor.ci.conf.js",
+    "serve": "ng serve --proxy-config proxy.config.json --host=0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -46,44 +46,45 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.7.5",
-    "@angular/cli": "6.1.5",
-    "@angular/compiler-cli": "6.1.7",
-    "@angular/language-service": "6.1.7",
-    "@ng-apimock/core": "1.0.2",
-    "@ng-apimock/test-application": "1.0.4",
-    "@types/chai": "^4.1.4",
-    "@types/cucumber": "^4.0.4",
-    "@types/jasmine": "2.8.8",
-    "@types/node": "10.9.4",
-    "@types/sinon": "5.0.2",
-    "chai": "^4.1.2",
-    "codelyzer": "4.4.4",
+    "@angular-devkit/build-angular": "0.8.5",
+    "@angular/cli": "6.2.5",
+    "@angular/compiler-cli": "6.1.10",
+    "@angular/language-service": "6.1.10",
+    "@ng-apimock/core": "1.0.7",
+    "@ng-apimock/test-application": "1.0.6",
+    "@types/chai": "4.1.6",
+    "@types/cucumber": "4.0.4",
+    "@types/jasmine": "2.8.9",
+    "@types/node": "10.11.7",
+    "@types/sinon": "5.0.5",
+    "chai": "4.2.0",
+    "codelyzer": "4.5.0",
     "connect": "3.6.6",
-    "cucumber": "^4.2.1",
-    "jasmine-ts": "0.2.1",
-    "protractor": "^5.4.1",
-    "protractor-cucumber-framework": "^6.0.0",
-    "sauce-connect-launcher": "^1.2.4",
-    "sinon": "6.2.0",
+    "cucumber": "5.0.2",
+    "jasmine-ts": "0.3.0",
+    "p-iteration": "^1.1.7",
+    "protractor": "5.4.1",
+    "protractor-cucumber-framework": "6.1.1",
+    "sauce-connect-launcher": "1.2.4",
+    "sinon": "7.0.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "typescript": "2.9.2"
+    "typescript": "3.1.3"
   },
   "dependencies": {
-    "@angular/animations": "6.1.7",
-    "@angular/common": "6.1.7",
-    "@angular/compiler": "6.1.7",
-    "@angular/core": "6.1.7",
-    "@angular/forms": "6.1.7",
-    "@angular/http": "6.1.7",
-    "@angular/platform-browser": "6.1.7",
-    "@angular/platform-browser-dynamic": "6.1.7",
-    "@angular/router": "6.1.7",
+    "@angular/animations": "6.1.10",
+    "@angular/common": "6.1.10",
+    "@angular/compiler": "6.1.10",
+    "@angular/core": "6.1.10",
+    "@angular/forms": "6.1.10",
+    "@angular/http": "6.1.10",
+    "@angular/platform-browser": "6.1.10",
+    "@angular/platform-browser-dynamic": "6.1.10",
+    "@angular/router": "6.1.10",
     "angular2-prettyjson": "3.0.1",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
-    "rxjs": "6.3.2",
+    "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   }
 }
