--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
