--- a/package.json
+++ b/package.json
@@ -46,23 +46,25 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.8.5",
-    "@angular/cli": "6.2.5",
-    "@angular/compiler-cli": "6.1.10",
-    "@angular/language-service": "6.1.10",
-    "@ng-apimock/core": "1.0.7",
+    "@angular-devkit/build-angular": "0.10.1",
+    "@angular/cli": "7.0.1",
+    "@angular/compiler-cli": "7.0.0",
+    "@angular/language-service": "7.0.0",
+    "@ng-apimock/core": "1.0.8",
+    "@ng-apimock/protractor-plugin": "1.0.4",
     "@ng-apimock/test-application": "1.0.6",
     "@types/chai": "4.1.6",
     "@types/cucumber": "4.0.4",
     "@types/jasmine": "2.8.9",
-    "@types/node": "10.11.7",
+    "@types/node": "10.12.0",
     "@types/sinon": "5.0.5",
     "chai": "4.2.0",
     "codelyzer": "4.5.0",
     "connect": "3.6.6",
+    "connect-modrewrite": "0.10.2",
     "cucumber": "5.0.2",
     "jasmine-ts": "0.3.0",
-    "p-iteration": "^1.1.7",
+    "p-iteration": "1.1.7",
     "protractor": "5.4.1",
     "protractor-cucumber-framework": "6.1.1",
     "sauce-connect-launcher": "1.2.4",
@@ -72,18 +74,19 @@
     "typescript": "3.1.3"
   },
   "dependencies": {
-    "@angular/animations": "6.1.10",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/forms": "6.1.10",
-    "@angular/http": "6.1.10",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@angular/router": "6.1.10",
+    "@angular/animations": "7.0.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/forms": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/router": "7.0.0",
     "angular2-prettyjson": "3.0.1",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
+    "protractor-intercept": "1.0.2",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   }
