--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.1",
-    "@angular/cli": "7.0.1",
+    "@angular-devkit/build-angular": "0.10.2",
+    "@angular/cli": "7.0.2",
     "@angular/compiler-cli": "7.0.0",
     "@angular/language-service": "7.0.0",
-    "@ng-apimock/core": "1.0.8",
-    "@ng-apimock/protractor-plugin": "1.0.4",
-    "@ng-apimock/test-application": "1.0.6",
+    "@ng-apimock/core": "1.0.9",
+    "@ng-apimock/protractor-plugin": "1.0.5",
+    "@ng-apimock/test-application": "1.0.7",
     "@types/chai": "4.1.6",
     "@types/cucumber": "4.0.4",
     "@types/jasmine": "2.8.9",
@@ -84,6 +84,7 @@
     "@angular/platform-browser-dynamic": "7.0.0",
     "@angular/router": "7.0.0",
     "angular2-prettyjson": "3.0.1",
+    "body-parser": "^1.18.3",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
     "protractor-intercept": "1.0.2",
