chore(package): release

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ng-apimock/dev-interface",
-  "description": "Protractor plugin for ng-apimock",
-  "version": "1.0.1",
+  "description": "Development interface for ng-apimock",
+  "version": "1.0.2",
   "homepage": "https://github.com/ng-apimock/dev-interface#readme",
   "author": {
     "name": "Mischa Dasberg",
@@ -47,9 +47,18 @@
   ],
   "devDependencies": {
     "@angular-devkit/build-angular": "0.10.2",
+    "@angular/animations": "7.0.0",
     "@angular/cli": "7.0.2",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
     "@angular/compiler-cli": "7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "7.0.0",
+    "@angular/http": "7.0.0",
     "@angular/language-service": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/router": "7.0.0",
     "@ng-apimock/core": "1.0.9",
     "@ng-apimock/protractor-plugin": "1.0.5",
     "@ng-apimock/test-application": "1.0.7",
@@ -58,37 +67,27 @@
     "@types/jasmine": "2.8.9",
     "@types/node": "10.12.0",
     "@types/sinon": "5.0.5",
+    "angular2-prettyjson": "3.0.1",
+    "body-parser": "^1.18.3",
+    "bootstrap": "4.1.3",
     "chai": "4.2.0",
     "codelyzer": "4.5.0",
     "connect": "3.6.6",
     "connect-modrewrite": "0.10.2",
+    "core-js": "2.5.7",
     "cucumber": "5.0.2",
     "jasmine-ts": "0.3.0",
     "p-iteration": "1.1.7",
     "protractor": "5.4.1",
     "protractor-cucumber-framework": "6.1.1",
+    "protractor-intercept": "1.0.2",
+    "rxjs": "6.3.3",
     "sauce-connect-launcher": "1.2.4",
     "sinon": "7.0.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "typescript": "3.1.3"
-  },
-  "dependencies": {
-    "@angular/animations": "7.0.0",
-    "@angular/common": "7.0.0",
-    "@angular/compiler": "7.0.0",
-    "@angular/core": "7.0.0",
-    "@angular/forms": "7.0.0",
-    "@angular/http": "7.0.0",
-    "@angular/platform-browser": "7.0.0",
-    "@angular/platform-browser-dynamic": "7.0.0",
-    "@angular/router": "7.0.0",
-    "angular2-prettyjson": "3.0.1",
-    "body-parser": "^1.18.3",
-    "bootstrap": "4.1.3",
-    "core-js": "2.5.7",
-    "protractor-intercept": "1.0.2",
-    "rxjs": "6.3.3",
+    "typescript": "3.1.3",
     "zone.js": "0.8.26"
-  }
+  },
+  "dependencies": {}
 }
