--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "jasmine-ts --config=jasmine.json --project=src/tsconfig.spec.json",
     "protractor-local": "protractor test/protractor.local.conf.js",
     "protractor-ci": "protractor test/protractor.ci.conf.js",
-    "serve": "ng serve --proxy-config proxy.config.json --host=0.0.0.0"
+    "serve": "ng serve --configuration=production --proxy-config proxy.config.json --host=0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -52,7 +52,7 @@
     "@angular/common": "7.0.0",
     "@angular/compiler": "7.0.0",
     "@angular/compiler-cli": "7.0.0",
-    "@angular/core": "^7.0.0",
+    "@angular/core": "7.0.0",
     "@angular/forms": "7.0.0",
     "@angular/http": "7.0.0",
     "@angular/language-service": "7.0.0",
@@ -68,7 +68,7 @@
     "@types/node": "10.12.0",
     "@types/sinon": "5.0.5",
     "angular2-prettyjson": "3.0.1",
-    "body-parser": "^1.18.3",
+    "body-parser": "1.18.3",
     "bootstrap": "4.1.3",
     "chai": "4.2.0",
     "codelyzer": "4.5.0",
@@ -89,5 +89,7 @@
     "typescript": "3.1.3",
     "zone.js": "0.8.26"
   },
-  "dependencies": {}
+  "dependencies": {
+    "protractor-multiple-cucumber-html-reporter-plugin": "^1.8.0"
+  }
 }
