--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "jasmine-ts --config=jasmine.json --project=src/tsconfig.spec.json",
     "protractor-local": "protractor test/protractor.local.conf.js",
     "protractor-ci": "protractor test/protractor.ci.conf.js",
-    "serve": "ng serve --configuration=production --proxy-config proxy.config.json --host=0.0.0.0"
+    "serve": "ng serve --proxy-config proxy.config.json --host=0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -46,26 +46,26 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.2",
-    "@angular/animations": "7.0.0",
-    "@angular/cli": "7.0.2",
-    "@angular/common": "7.0.0",
-    "@angular/compiler": "7.0.0",
-    "@angular/compiler-cli": "7.0.0",
-    "@angular/core": "7.0.0",
-    "@angular/forms": "7.0.0",
-    "@angular/http": "7.0.0",
-    "@angular/language-service": "7.0.0",
-    "@angular/platform-browser": "7.0.0",
-    "@angular/platform-browser-dynamic": "7.0.0",
-    "@angular/router": "7.0.0",
-    "@ng-apimock/core": "1.0.9",
-    "@ng-apimock/protractor-plugin": "1.0.5",
-    "@ng-apimock/test-application": "1.0.7",
-    "@types/chai": "4.1.6",
+    "@angular-devkit/build-angular": "0.10.4",
+    "@angular/animations": "7.0.2",
+    "@angular/cli": "7.0.4",
+    "@angular/common": "7.0.2",
+    "@angular/compiler": "7.0.2",
+    "@angular/compiler-cli": "7.0.2",
+    "@angular/core": "7.0.2",
+    "@angular/forms": "7.0.2",
+    "@angular/http": "7.0.2",
+    "@angular/language-service": "7.0.2",
+    "@angular/platform-browser": "7.0.2",
+    "@angular/platform-browser-dynamic": "7.0.2",
+    "@angular/router": "7.0.2",
+    "@ng-apimock/core": "1.0.11",
+    "@ng-apimock/protractor-plugin": "file:../protractor-plugin",
+    "@ng-apimock/test-application": "1.0.9",
+    "@types/chai": "4.1.7",
     "@types/cucumber": "4.0.4",
     "@types/jasmine": "2.8.9",
-    "@types/node": "10.12.0",
+    "@types/node": "10.12.2",
     "@types/sinon": "5.0.5",
     "angular2-prettyjson": "3.0.1",
     "body-parser": "1.18.3",
@@ -83,10 +83,10 @@
     "protractor-intercept": "1.0.2",
     "rxjs": "6.3.3",
     "sauce-connect-launcher": "1.2.4",
-    "sinon": "7.0.0",
+    "sinon": "7.1.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "typescript": "3.1.3",
+    "typescript": "3.1.6",
     "zone.js": "0.8.26"
   },
   "dependencies": {
