chore(package): update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,11 @@
   },
   "angularCompilerOptions": {
     "disableTypeScriptVersionCheck": true
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "**/*.spec.ts"
+  ]
 }
