--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: lint
         run: npm run lint
       - name: build
-        run: npm run compile
+        run: npm run build
       - name: test
         run: npm test
         env:
