--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: install
         run: npm ci
       - name: build
-        run: npm run compile
+        run: npm run build
       - name: publish
         run: npx semantic-release
         env:
