--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
                     },
                     "configurations": {
                         "production": {
+                            "baseHref": "",
                             "fileReplacements": [
                                 {
                                     "replace": "src/environments/environment.ts",
@@ -57,8 +58,8 @@
                                 },
                                 {
                                     "type": "anyComponentStyle",
-                                    "maximumWarning": "6kb",
-                                    "maximumError": "10kb"
+                                    "maximumWarning": "15kb",
+                                    "maximumError": "20kb"
                                 }
                             ]
                         }
