--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "scripts": {
     "ng": "ng",
     "ngapimock": "node test/server.js",
-    "prebuild": "rm -rf dist",
+    "prebuild": "rimraf dist",
     "build": "ng build --configuration=production",
     "lint": "ng lint",
     "test": "jest --config=jest.config.js -w 1",
     "protractor-local": "protractor test/protractor.local.conf.js",
     "protractor-ci": "protractor test/protractor.ci.conf.js",
-    "start": "ng serve --proxy-config proxy.config.json --host=0.0.0.0"
+    "start": "ng serve --proxy-config proxy.config.json --host=0.0.0.0",
+    "sauce:download": "curl https://saucelabs.com/downloads/sc-4.6.2-linux.tar.gz --output sc-4.6.2-linux.tar.gz",
+    "postsauce:download": "tar -xvf sc-4.6.2-linux.tar.gz",
+    "sauce:start": "cd sc-4.6.2-linux && ./bin/sc",
+    "sauce:started": "wait-on /tmp/sc-started -v"
   },
   "repository": {
     "type": "git",
@@ -49,10 +53,18 @@
     "@angular-devkit/build-angular": "0.1001.0",
     "@angular/cli": "10.1.0",
     "@angular/compiler-cli": "10.1.0",
+    "@commitlint/cli": "9.1.2",
+    "@commitlint/config-conventional": "9.1.2",
     "@ng-apimock/base-client": "2.0.1",
     "@ng-apimock/core": "2.3.2",
     "@ng-apimock/protractor-plugin": "1.1.0",
     "@ng-apimock/test-application": "1.0.17",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.1.0",
+    "@semantic-release/npm": "7.0.6",
+    "@semantic-release/release-notes-generator": "9.0.1",
     "@types/chai": "4.2.12",
     "@types/cucumber": "6.0.1",
     "@types/jest": "26.0.13",
@@ -62,20 +74,27 @@
     "bootstrap": "4.5.2",
     "chai": "4.2.0",
     "codelyzer": "6.0.0",
+    "commitizen": "4.2.1",
     "connect": "3.7.0",
     "connect-modrewrite": "0.10.2",
     "core-js": "3.6.5",
     "cucumber": "6.0.5",
+    "husky": "4.3.0",
     "jest": "26.4.2",
     "jest-createspyobj": "1.2.2",
     "jest-preset-angular": "8.3.1",
+    "lint-staged": "10.3.0",
+    "p-iteration": "^1.1.8",
     "protractor": "7.0.0",
     "protractor-cucumber-framework": "6.2.1",
-    "protractor-intercept": "1.0.2",
-    "sauce-connect-launcher": "1.3.2",
+    "rimraf": "3.0.2",
+    "semantic-release": "17.1.1",
+    "serve-static": "1.14.1",
     "ts-jest": "26.3.0",
+    "ts-node": "9.0.0",
     "tslint": "6.1.3",
-    "typescript": "4.0.2"
+    "typescript": "4.0.2",
+    "wait-on": "5.2.0"
   },
   "dependencies": {
     "@angular/animations": "10.1.0",
