--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.0",
-    "@angular/cli": "10.1.0",
-    "@angular/compiler-cli": "10.1.0",
+    "@angular-devkit/build-angular": "0.1102.6",
+    "@angular/cli": "11.2.6",
+    "@angular/compiler-cli": "11.2.7",
     "@commitlint/cli": "9.1.2",
     "@commitlint/config-conventional": "9.1.2",
-    "@ng-apimock/base-client": "2.0.1",
-    "@ng-apimock/core": "2.3.2",
+    "@ng-apimock/base-client": "2.0.2",
+    "@ng-apimock/core": "2.5",
     "@ng-apimock/protractor-plugin": "1.1.0",
     "@ng-apimock/test-application": "1.0.17",
     "@semantic-release/changelog": "5.0.1",
@@ -73,7 +73,7 @@
     "body-parser": "1.19.0",
     "bootstrap": "4.5.2",
     "chai": "4.2.0",
-    "codelyzer": "6.0.0",
+    "codelyzer": "^6.0.0",
     "commitizen": "4.2.1",
     "connect": "3.7.0",
     "connect-modrewrite": "0.10.2",
@@ -97,16 +97,18 @@
     "wait-on": "5.2.0"
   },
   "dependencies": {
-    "@angular/animations": "10.1.0",
-    "@angular/common": "10.1.0",
-    "@angular/compiler": "10.1.0",
-    "@angular/core": "10.1.0",
-    "@angular/forms": "10.1.0",
-    "@angular/platform-browser": "10.1.0",
-    "@angular/platform-browser-dynamic": "10.1.0",
-    "@angular/router": "10.1.0",
+    "@angular/animations": "11.2.7",
+    "@angular/cdk": "^11.2.6",
+    "@angular/common": "11.2.7",
+    "@angular/compiler": "11.2.7",
+    "@angular/core": "11.2.7",
+    "@angular/forms": "11.2.7",
+    "@angular/material": "^11.2.6",
+    "@angular/platform-browser": "11.2.7",
+    "@angular/platform-browser-dynamic": "11.2.7",
+    "@angular/router": "11.2.7",
     "rxjs": "6.6.3",
-    "tslib": "2.0.1",
-    "zone.js": "0.11.1"
+    "tslib": "^2.0.0",
+    "zone.js": "0.11.4"
   }
 }
