--- a/package.json
+++ b/package.json
@@ -50,64 +50,64 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.9",
-    "@angular/cli": "11.2.9",
-    "@angular/compiler-cli": "11.2.10",
-    "@commitlint/cli": "12.1.1",
-    "@commitlint/config-conventional": "12.1.1",
+    "@angular-devkit/build-angular": "12.0.3",
+    "@angular/cli": "12.0.3",
+    "@angular/compiler-cli": "12.0.3",
+    "@commitlint/cli": "12.1.4",
+    "@commitlint/config-conventional": "12.1.4",
     "@ng-apimock/base-client": "2.0.2",
-    "@ng-apimock/core": "2.7.0",
+    "@ng-apimock/core": "3.0.1",
     "@ng-apimock/protractor-plugin": "1.1.0",
     "@ng-apimock/test-application": "2.0.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/commit-analyzer": "8.0.1",
     "@semantic-release/git": "9.0.0",
-    "@semantic-release/github": "7.2.1",
-    "@semantic-release/npm": "7.1.1",
+    "@semantic-release/github": "7.2.3",
+    "@semantic-release/npm": "7.1.3",
     "@semantic-release/release-notes-generator": "9.0.2",
-    "@types/chai": "4.2.16",
+    "@types/chai": "4.2.18",
     "@types/cucumber": "6.0.1",
-    "@types/jest": "26.0.22",
-    "@types/node": "14.14.39",
+    "@types/jest": "26.0.23",
+    "@types/node": "15.12.0",
     "angular2-prettyjson": "3.0.1",
     "body-parser": "1.19.0",
     "chai": "4.3.4",
-    "codelyzer": "^6.0.1",
-    "commitizen": "4.2.3",
+    "codelyzer": "6.0.2",
+    "commitizen": "4.2.4",
     "connect": "3.7.0",
     "connect-modrewrite": "0.10.2",
-    "core-js": "3.10.1",
+    "core-js": "3.13.1",
     "cucumber": "6.0.5",
     "husky": "6.0.0",
-    "jest": "26.6.3",
+    "jest": "27.0.4",
     "jest-createspyobj": "2.0.0",
-    "jest-preset-angular": "8.4.0",
-    "lint-staged": "10.5.4",
-    "p-iteration": "^1.1.8",
+    "jest-preset-angular": "9.0.1",
+    "lint-staged": "11.0.0",
+    "p-iteration": "1.1.8",
     "protractor": "7.0.0",
     "protractor-cucumber-framework": "6.2.1",
     "rimraf": "3.0.2",
-    "semantic-release": "17.4.2",
+    "semantic-release": "17.4.3",
     "serve-static": "1.14.1",
-    "ts-jest": "26.5.4",
-    "ts-node": "9.1.1",
+    "ts-jest": "27.0.2",
+    "ts-node": "10.0.0",
     "tslint": "6.1.3",
-    "typescript": "4.1.5",
+    "typescript": "4.2.4",
     "wait-on": "5.3.0"
   },
   "dependencies": {
-    "@angular/animations": "11.2.10",
-    "@angular/cdk": "^11.2.9",
-    "@angular/common": "11.2.10",
-    "@angular/compiler": "11.2.10",
-    "@angular/core": "11.2.10",
-    "@angular/forms": "11.2.10",
-    "@angular/material": "^11.2.9",
-    "@angular/platform-browser": "11.2.10",
-    "@angular/platform-browser-dynamic": "11.2.10",
-    "@angular/router": "11.2.10",
+    "@angular/animations": "12.0.3",
+    "@angular/cdk": "12.0.2",
+    "@angular/common": "12.0.3",
+    "@angular/compiler": "12.0.3",
+    "@angular/core": "12.0.3",
+    "@angular/forms": "12.0.3",
+    "@angular/material": "12.0.2",
+    "@angular/platform-browser": "12.0.3",
+    "@angular/platform-browser-dynamic": "12.0.3",
+    "@angular/router": "12.0.3",
     "rxjs": "6.6.7",
-    "tslib": "^2.2.0",
-    "zone.js": "0.11.4"
+    "tslib": "2.2.0",
+    "zone.js": "~0.11.4"
   }
 }
