--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
   ],
   "devDependencies": {
     "@angular-devkit/build-angular": "12.0.3",
+    "@angular-eslint/builder": "12.1.0",
+    "@angular-eslint/eslint-plugin": "12.1.0",
+    "@angular-eslint/eslint-plugin-template": "12.1.0",
+    "@angular-eslint/schematics": "12.1.0",
+    "@angular-eslint/template-parser": "12.1.0",
     "@angular/cli": "12.0.3",
     "@angular/compiler-cli": "12.0.3",
     "@commitlint/cli": "12.1.4",
@@ -58,7 +63,6 @@
     "@ng-apimock/base-client": "2.0.2",
     "@ng-apimock/core": "3.0.1",
     "@ng-apimock/protractor-plugin": "1.1.0",
-    "@ng-apimock/test-application": "2.0.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/commit-analyzer": "8.0.1",
     "@semantic-release/git": "9.0.0",
@@ -68,16 +72,17 @@
     "@types/chai": "4.2.18",
     "@types/cucumber": "6.0.1",
     "@types/jest": "26.0.23",
-    "@types/node": "15.12.0",
+    "@types/node": "15.12.1",
+    "@typescript-eslint/eslint-plugin": "4.26.0",
+    "@typescript-eslint/parser": "4.26.0",
     "angular2-prettyjson": "3.0.1",
     "body-parser": "1.19.0",
     "chai": "4.3.4",
-    "codelyzer": "6.0.2",
     "commitizen": "4.2.4",
     "connect": "3.7.0",
     "connect-modrewrite": "0.10.2",
-    "core-js": "3.13.1",
     "cucumber": "6.0.5",
+    "eslint": "7.27.0",
     "husky": "6.0.0",
     "jest": "27.0.4",
     "jest-createspyobj": "2.0.0",
@@ -89,20 +94,18 @@
     "rimraf": "3.0.2",
     "semantic-release": "17.4.3",
     "serve-static": "1.14.1",
-    "ts-jest": "27.0.2",
     "ts-node": "10.0.0",
-    "tslint": "6.1.3",
     "typescript": "4.2.4",
     "wait-on": "5.3.0"
   },
   "dependencies": {
     "@angular/animations": "12.0.3",
-    "@angular/cdk": "12.0.2",
+    "@angular/cdk": "12.0.3",
     "@angular/common": "12.0.3",
     "@angular/compiler": "12.0.3",
     "@angular/core": "12.0.3",
     "@angular/forms": "12.0.3",
-    "@angular/material": "12.0.2",
+    "@angular/material": "12.0.3",
     "@angular/platform-browser": "12.0.3",
     "@angular/platform-browser-dynamic": "12.0.3",
     "@angular/router": "12.0.3",
