--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,14 +1,15 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
     "outDir": "./out-tsc/spec",
     "types": [
       "jest"
     ]
   },
   "files": [
-    "src/test.ts",
     "src/polyfills.ts"
   ],
   "include": [
