--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,30 +11,32 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        node: [10, 12, 13]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-
+        node_version:
+          - 12
+        os:
+          - ubuntu-latest
+        architecture:
+          - x64
     steps:
       - uses: actions/checkout@v2
-      - name: Use node ${{ matrix.node }}
-        uses: actions/setup-node@v1
+      - name: Setup node ${{ matrix.node_version }} - ${{ matrix.architecture }} on ${{ matrix.os }}
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node }}
+          node-version: ${{ matrix.node_version }}
+          architecture: ${{ matrix.architecture }}
           registry-url: https://registry.npmjs.org
-      - name: Cache npm
-        uses: actions/cache@v1
+      - name: Cache
+        uses: actions/cache@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - name: install
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: lint
-        run: npm run lint
+        run: yarn lint
       - name: build
-        run: npm run build
+        run: yarn build
       - name: test
-        run: npm test
+        run: yarn test
         env:
           FORCE_EXIT: true
