--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,22 +12,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org
       - name: install
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: build
-        run: npm run build
+        run: yarn run build
       - name: sauce connect proxy download
-        run: npm run sauce:download
+        run: yarn run sauce:download
       - name: sauce connect
-        run: nohup npm run sauce:start -- --user=${{ secrets.SAUCE_USERNAME }} --api-key=${{ secrets.SAUCE_ACCESS_KEY }} --tunnel-identifier=${{ github.run_id }} --readyfile=/tmp/sc-started &
+        run: nohup yarn run sauce:start -- --user=${{ secrets.SAUCE_USERNAME }} --api-key=${{ secrets.SAUCE_ACCESS_KEY }} --tunnel-identifier=${{ github.run_id }} --readyfile=/tmp/sc-started &
       - name: sauce connected check
-        run: npm run sauce:started
+        run: yarn run sauce:started
       - name: integration test
-        run: npm run protractor-ci
+        run: yarn run protractor-ci
         env:
           SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
           SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
