fix: sonar issues

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.projectKey=ng-apimock_dev-interface
 sonar.working.directory=.scannerwork
 sonar.projectName=dev-interface
 sonar.sources=src
-sonar.exclusions=**/*.spec.ts
+sonar.exclusions=**/*.spec.ts, **/*.po.ts
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
