style: 💄 Update to alpha release of eslint
https://github.com/angular-eslint/angular-eslint/issues/715

--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
   ],
   "devDependencies": {
     "@angular-devkit/build-angular": "13.0.1",
-    "@angular-eslint/builder": "12.6.1",
-    "@angular-eslint/eslint-plugin": "12.6.1",
-    "@angular-eslint/eslint-plugin-template": "12.6.1",
-    "@angular-eslint/schematics": "12.6.1",
-    "@angular-eslint/template-parser": "12.6.1",
+    "@angular-eslint/builder": "13.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin": "13.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin-template": "13.0.0-alpha.0",
+    "@angular-eslint/schematics": "13.0.0-alpha.0",
+    "@angular-eslint/template-parser": "13.0.0-alpha.0",
     "@angular/cli": "13.0.1",
     "@angular/compiler-cli": "13.0.0",
     "@commitlint/cli": "14.1.0",
@@ -80,7 +80,7 @@
     "chai": "4.3.4",
     "commitizen": "4.2.4",
     "cucumber": "6.0.5",
-    "eslint": "8.2.0",
+    "eslint": "^8.1.0",
     "express": "4.17.1",
     "husky": "7.0.4",
     "jest": "27.3.1",
