fix: #202 use text response instead of json (#203)

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prebuild": "rimraf dist",
     "build": "ng build --configuration=production",
     "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "test": "jest --config=jest.config.js -w 1",
     "protractor-local": "protractor test/protractor.local.conf.js",
     "protractor-ci": "protractor test/protractor.ci.conf.js",
@@ -50,64 +51,64 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.0.1",
-    "@angular-eslint/builder": "13.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin": "13.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin-template": "13.0.0-alpha.0",
-    "@angular-eslint/schematics": "13.0.0-alpha.0",
-    "@angular-eslint/template-parser": "13.0.0-alpha.0",
-    "@angular/cli": "13.0.1",
-    "@angular/compiler-cli": "13.0.0",
-    "@commitlint/cli": "14.1.0",
-    "@commitlint/config-conventional": "14.1.0",
+    "@angular-devkit/build-angular": "13.2.0",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.2.0",
+    "@angular/compiler-cli": "13.2.0",
+    "@commitlint/cli": "16.1.0",
+    "@commitlint/config-conventional": "16.0.0",
     "@ng-apimock/base-client": "3.1.0",
-    "@ng-apimock/core": "3.3.0",
+    "@ng-apimock/core": "3.4.0",
     "@ng-apimock/protractor-plugin": "2.0.0",
     "@semantic-release/changelog": "6.0.1",
-    "@semantic-release/commit-analyzer": "9.0.1",
+    "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.0.2",
-    "@semantic-release/npm": "8.0.3",
-    "@semantic-release/release-notes-generator": "10.0.2",
-    "@types/chai": "4.2.22",
+    "@semantic-release/npm": "9.0.0",
+    "@semantic-release/release-notes-generator": "10.0.3",
+    "@types/chai": "4.3.0",
     "@types/cucumber": "6.0.1",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1",
+    "@types/jest": "27.4.0",
+    "@types/node": "17.0.13",
+    "@typescript-eslint/eslint-plugin": "5.10.1",
+    "@typescript-eslint/parser": "5.10.1",
     "angular2-prettyjson": "3.0.1",
-    "body-parser": "1.19.0",
-    "chai": "4.3.4",
+    "body-parser": "1.19.1",
+    "chai": "4.3.6",
     "commitizen": "4.2.4",
     "cucumber": "6.0.5",
-    "eslint": "8.2.0",
-    "express": "4.17.1",
+    "eslint": "8.8.0",
+    "express": "4.17.2",
     "husky": "7.0.4",
-    "jest": "27.3.1",
+    "jest": "27.4.7",
     "jest-createspyobj": "2.0.0",
-    "jest-preset-angular": "11.0.0-rc.3",
-    "lint-staged": "11.2.6",
+    "jest-preset-angular": "11.1.0",
+    "lint-staged": "12.3.2",
     "p-iteration": "1.1.8",
     "protractor": "7.0.0",
-    "protractor-cucumber-framework": "8.2.7",
+    "protractor-cucumber-framework": "8.2.11",
     "rimraf": "3.0.2",
-    "semantic-release": "18.0.0",
+    "semantic-release": "19.0.2",
     "ts-node": "10.4.0",
-    "typescript": "4.4.4",
+    "typescript": "4.5.5",
     "wait-on": "6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "13.0.0",
-    "@angular/cdk": "13.0.0",
-    "@angular/common": "13.0.0",
-    "@angular/compiler": "13.0.0",
-    "@angular/core": "13.0.0",
-    "@angular/forms": "13.0.0",
-    "@angular/material": "13.0.0",
-    "@angular/platform-browser": "13.0.0",
-    "@angular/platform-browser-dynamic": "13.0.0",
-    "@angular/router": "13.0.0",
-    "rxjs": "7.4.0",
+    "@angular/animations": "13.2.0",
+    "@angular/cdk": "13.2.0",
+    "@angular/common": "13.2.0",
+    "@angular/compiler": "13.2.0",
+    "@angular/core": "13.2.0",
+    "@angular/forms": "13.2.0",
+    "@angular/material": "13.2.0",
+    "@angular/platform-browser": "13.2.0",
+    "@angular/platform-browser-dynamic": "13.2.0",
+    "@angular/router": "13.2.0",
+    "rxjs": "7.5.2",
     "tslib": "2.3.1",
     "zone.js": "~0.11.4"
   },
