fix: incompatible jest versions

--- a/angular.json
+++ b/angular.json
@@ -101,6 +101,7 @@
     "warnings": {
       "typescriptMismatch": false
     },
-    "defaultCollection": "@angular-eslint/schematics"
+    "defaultCollection": "@angular-eslint/schematics",
+    "analytics": false
   }
 }
