chore: Migrate to ng v17

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,10 @@
             "type": "attribute"
           }
         ],
-        "object-curly-spacing": [2, "always"]
+        "object-curly-spacing": [
+          2,
+          "always"
+        ]
       }
     },
     {
