--- a/angular.json
+++ b/angular.json
@@ -76,11 +76,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngApimock/dev-interface:build"
+            "buildTarget": "ngApimock/dev-interface:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngApimock/dev-interface:build:production"
+              "buildTarget": "ngApimock/dev-interface:build:production"
             }
           }
         },
