--- a/package.json
+++ b/package.json
@@ -51,24 +51,24 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular/animations": "15.1.0",
+    "@angular/animations": "17.0.3",
     "@angular/cdk": "15.1.0",
-    "@angular/common": "15.1.0",
-    "@angular/compiler": "15.1.0",
-    "@angular/core": "15.1.0",
-    "@angular/forms": "15.1.0",
+    "@angular/common": "17.0.3",
+    "@angular/compiler": "17.0.3",
+    "@angular/core": "17.0.3",
+    "@angular/forms": "17.0.3",
     "@angular/material": "15.1.0",
-    "@angular/platform-browser": "15.1.0",
-    "@angular/platform-browser-dynamic": "15.1.0",
-    "@angular/router": "15.1.0",
-    "@angular-devkit/build-angular": "15.1.1",
-    "@angular-eslint/builder": "15.2.0",
-    "@angular-eslint/eslint-plugin": "15.2.0",
-    "@angular-eslint/eslint-plugin-template": "15.2.0",
-    "@angular-eslint/schematics": "15.2.0",
-    "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "15.1.1",
-    "@angular/compiler-cli": "15.1.0",
+    "@angular/platform-browser": "17.0.3",
+    "@angular/platform-browser-dynamic": "17.0.3",
+    "@angular/router": "17.0.3",
+    "@angular-devkit/build-angular": "17.0.1",
+    "@angular-eslint/builder": "17.1.0",
+    "@angular-eslint/eslint-plugin": "17.1.0",
+    "@angular-eslint/eslint-plugin-template": "17.1.0",
+    "@angular-eslint/schematics": "17.1.0",
+    "@angular-eslint/template-parser": "17.1.0",
+    "@angular/cli": "17.0.1",
+    "@angular/compiler-cli": "17.0.3",
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
     "@ng-apimock/base-client": "3.3.1",
@@ -84,14 +84,14 @@
     "@types/cucumber": "6.0.1",
     "@types/jest": "29.5.8",
     "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "angular2-prettyjson": "3.0.1",
     "body-parser": "1.20.1",
     "chai": "4.3.7",
     "commitizen": "4.2.6",
     "cucumber": "6.0.5",
-    "eslint": "8.32.0",
+    "eslint": "^8.53.0",
     "express": "4.18.2",
     "husky": "8.0.3",
     "jest": "29.7.0",
@@ -106,9 +106,9 @@
     "semantic-release": "20.0.2",
     "tslib": "2.4.1",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4",
+    "typescript": "5.2.2",
     "wait-on": "7.0.1",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.14.2"
   },
   "lint-staged": {
     "**/**.{ts}": [
