feat: Make required changes to work with ng 17

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -9,8 +9,9 @@
       "jest"
     ]
   },
-  "files": [
-    "src/polyfills.ts"
+  "polyfills": [
+    "zone.js",
+    "zone.js/testing"
   ],
   "include": [
     "src/**/*.spec.ts",
