--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,15 +22,12 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: build
         run: yarn build
-      - name: sauce connect proxy download
-        run: yarn sauce:download
-      - name: sauce connect
-        run: nohup yarn sauce:start -- --user=${{ secrets.SAUCE_USERNAME }} --api-key=${{ secrets.SAUCE_ACCESS_KEY }} --tunnel-identifier=${{ github.run_id }} --readyfile=/tmp/sc-started &
-      - name: sauce connected check
-        run: yarn sauce:started
       - name: integration test
-        run: yarn protractor-ci
+        uses: cypress-io/github-action@v5
+        with:
+          start: yarn start
+          wait-on: 'http://localhost:9999'
+          browser: chrome
         env:
-          SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
-          SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FORCE_EXIT: true
