--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -27,3 +27,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          FORCE_EXIT: true
