feature: migrate angular 17 (#517)
* fix: incompatible jest versions

* chore: Migrate to ng v17

* chore: Migrate to angular material/cdk v16

* chore: Migrate to angular material/cdk v17

* chore: Update .gitignore

* feat: Make required changes to work with ng 17

* feat: Migrate to standalone components

* feat: Tiny rebranding

* chore: fix tests and build

* chore: switch to cypress for testing

* chore: switch to cypress for testing

* chore: fix image build path

---------

Co-authored-by: mdasberg <mischa@dasberg.nl>

--- a/angular.json
+++ b/angular.json
@@ -18,25 +18,20 @@
       "prefix": "apimock",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist",
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "browser": "src/main.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
               "src/style.scss"
             ],
             "scripts": [],
-            "vendorChunk": true,
             "extractLicenses": false,
-            "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
             "namedChunks": true
@@ -55,8 +50,6 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -70,37 +63,29 @@
                 }
               ]
             }
-          },
-          "defaultConfiguration": ""
+          }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngApimock/dev-interface:build"
+            "buildTarget": "ngApimock/dev-interface:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngApimock/dev-interface:build:production"
+              "buildTarget": "ngApimock/dev-interface:build:production"
             }
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
     }
   },
-  "defaultProject": "ngApimock/dev-interface",
   "cli": {
-    "warnings": {
-      "typescriptMismatch": false
-    },
-    "defaultCollection": "@angular-eslint/schematics"
+    "analytics": false
   }
 }
