--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
     "ngapimock": "node test/serve.js",
     "prebuild": "rimraf dist",
     "build": "ng build --configuration=production",
+    "postbuild": "mv dist/browser/* dist && rimraf dist/browser",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "test": "jest --config=jest.config.js -w 1",
-    "protractor-local": "protractor test/protractor.local.conf.js",
-    "protractor-ci": "protractor test/protractor.ci.conf.js",
     "start": "ng serve --proxy-config proxy.config.json --host=0.0.0.0",
-    "sauce:download": "curl https://saucelabs.com/downloads/sc-4.6.2-linux.tar.gz --output sc-4.6.2-linux.tar.gz",
-    "postsauce:download": "tar -xvf sc-4.6.2-linux.tar.gz",
-    "sauce:start": "cd sc-4.6.2-linux && ./bin/sc",
-    "sauce:started": "wait-on /tmp/sc-started -v"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -51,64 +48,65 @@
     "recording"
   ],
   "devDependencies": {
-    "@angular/animations": "15.1.0",
-    "@angular/cdk": "15.1.0",
-    "@angular/common": "15.1.0",
-    "@angular/compiler": "15.1.0",
-    "@angular/core": "15.1.0",
-    "@angular/forms": "15.1.0",
-    "@angular/material": "15.1.0",
-    "@angular/platform-browser": "15.1.0",
-    "@angular/platform-browser-dynamic": "15.1.0",
-    "@angular/router": "15.1.0",
-    "@angular-devkit/build-angular": "15.1.1",
-    "@angular-eslint/builder": "15.2.0",
-    "@angular-eslint/eslint-plugin": "15.2.0",
-    "@angular-eslint/eslint-plugin-template": "15.2.0",
-    "@angular-eslint/schematics": "15.2.0",
-    "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "15.1.1",
-    "@angular/compiler-cli": "15.1.0",
-    "@commitlint/cli": "17.4.2",
-    "@commitlint/config-conventional": "17.4.2",
+    "@angular-devkit/build-angular": "17.0.4",
+    "@angular-eslint/builder": "17.1.0",
+    "@angular-eslint/eslint-plugin": "17.1.0",
+    "@angular-eslint/eslint-plugin-template": "17.1.0",
+    "@angular-eslint/schematics": "17.1.0",
+    "@angular-eslint/template-parser": "17.1.0",
+    "@angular/animations": "17.0.5",
+    "@angular/cdk": "17.0.1",
+    "@angular/cli": "17.0.4",
+    "@angular/common": "17.0.5",
+    "@angular/compiler": "17.0.5",
+    "@angular/compiler-cli": "17.0.5",
+    "@angular/core": "17.0.5",
+    "@angular/forms": "17.0.5",
+    "@angular/material": "17.0.1",
+    "@angular/platform-browser": "17.0.5",
+    "@angular/platform-browser-dynamic": "17.0.5",
+    "@angular/router": "17.0.5",
+    "@badeball/cypress-cucumber-preprocessor": "^19.2.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@commitlint/cli": "17.8.1",
+    "@commitlint/config-conventional": "17.8.1",
     "@ng-apimock/base-client": "3.3.1",
-    "@ng-apimock/core": "3.6.1",
+    "@ng-apimock/core": "3.11.2",
+    "@ng-apimock/cypress-plugin": "^3.0.0",
     "@ng-apimock/protractor-plugin": "2.1.1",
-    "@semantic-release/changelog": "6.0.2",
+    "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "8.0.7",
+    "@semantic-release/github": "8.1.0",
     "@semantic-release/npm": "9.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "@types/chai": "4.3.4",
+    "@types/chai": "4.3.11",
     "@types/cucumber": "6.0.1",
-    "@types/jest": "29.2.5",
-    "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
-    "angular2-prettyjson": "3.0.1",
-    "body-parser": "1.20.1",
-    "chai": "4.3.7",
-    "commitizen": "4.2.6",
+    "@types/jest": "29.5.10",
+    "@types/node": "18.18.14",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "body-parser": "1.20.2",
+    "chai": "4.3.10",
+    "commitizen": "4.3.0",
     "cucumber": "6.0.5",
-    "eslint": "8.32.0",
+    "cypress": "13.6.0",
+    "eslint": "^8.54.0",
     "express": "4.18.2",
     "husky": "8.0.3",
-    "jest": "29.3.1",
+    "jest": "29.7.0",
     "jest-createspyobj": "2.0.0",
-    "jest-preset-angular": "12.2.3",
-    "lint-staged": "13.1.0",
+    "jest-preset-angular": "13.1.4",
+    "lint-staged": "13.3.0",
     "p-iteration": "1.1.8",
-    "protractor": "7.0.0",
-    "protractor-cucumber-framework": "9.0.0",
-    "rimraf": "4.0.6",
-    "rxjs": "7.8.0",
-    "semantic-release": "20.0.2",
-    "tslib": "2.4.1",
+    "rimraf": "4.4.1",
+    "rxjs": "7.8.1",
+    "semantic-release": "20.1.3",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4",
-    "wait-on": "7.0.1",
-    "zone.js": "~0.12.0"
+    "tslib": "2.6.2",
+    "typescript": "5.3.2",
+    "wait-on": "7.2.0",
+    "zone.js": "~0.14.2"
   },
   "lint-staged": {
     "**/**.{ts}": [
@@ -119,5 +117,10 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "cypress-cucumber-preprocessor": {
+    "stepDefinitions": [
+      "test/step_definitions/*.{js,ts}"
+    ]
   }
 }
