--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,14 +4,8 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "outDir": "./out-tsc/spec",
-    "types": [
-      "jest"
-    ]
+    "outDir": "./out-tsc/spec"
   },
-  "files": [
-    "src/polyfills.ts"
-  ],
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
